--- a/back_end/pom.xml
+++ b/back_end/pom.xml
@@ -14,7 +14,7 @@
     <name>back_end</name>
     <description>back_end</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version> <!-- Sử dụng Java 17 vì Spring Boot 3.x yêu cầu ít nhất Java 17 -->
         <kotlin.version>1.8.0</kotlin.version>
     </properties>
     <dependencies>
@@ -59,6 +59,7 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
@@ -81,18 +82,12 @@
             <version>1.18.30</version>
             <optional>true</optional>
         </dependency>
-        <!-- Thêm dependency cho Swagger -->
+        <!-- Thay thế springfox bằng springdoc-openapi -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version>
         </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -133,7 +128,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>1.8</jvmTarget>
+                    <jvmTarget>17</jvmTarget> <!-- Sử dụng JVM Target 17 -->
                     <compilerPlugins>
                         <plugin>lombok</plugin>
                     </compilerPlugins>
@@ -185,5 +180,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
